# botfjord

./: .env.template  Cargo.toml  README.md  lichess.py  requirements.txt
botfjord/: eval.py  mcts.py  types.py
botfjord-rust/: Cargo.toml
botfjord-rust/src/: eval.rs  mcts.rs
src/: eval.rs  genetic.rs  helpers.rs  lib.rs  main.rs  mcts.rs
