[package]
name = "botfjord"
version = "0.1.0"
authors = ["Jonathan Breidfjord <jbreidfjord@gmail.com>"]
edition = "2018"

[lib]
name = "mcts_rust"
crate-type = ["cdylib"]

[dependencies.pyo3]
version = "0.14.1"
features = ["extension-module"]

[dependencies]
chess = "3.2.0"
ordered-float = "2.7.0"
rand = "0.8.4"
rand_distr = "0.4.1"
